[gd_scene load_steps=5 format=3 uid="uid://c8yvxr1yvqn2bx"]

[ext_resource type="Script" uid="uid://b3djnqhls4x66" path="res://scenes/test/shop_test.gd" id="1_yvnbx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ShopTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnbx")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ShopContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToggleButtonContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="ToggleButton" type="Button" parent="ToggleButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "≡"
tooltip_text = "切换测试面板 (Shift+T)"

[node name="TestPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_right = 0.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="CloseButton" type="Button" parent="TestPanel"]
layout_mode = 0
offset_left = 220.0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 40.0
focus_mode = 0
text = "X"
tooltip_text = "关闭测试面板"

[node name="VBoxContainer" type="VBoxContainer" parent="TestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="TestPanel/VBoxContainer"]
layout_mode = 2
text = "测试功能"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TestPanel/VBoxContainer"]
layout_mode = 2

[node name="AddGoldButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 91.0
text = "增加金币 (+50)"

[node name="UpgradeLevelButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 100.0
offset_right = 180.0
offset_bottom = 131.0
text = "提升等级"

[node name="UpgradeShopButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 140.0
offset_right = 180.0
offset_bottom = 171.0
text = "升级商店"

[node name="ApplyDiscountButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 180.0
offset_right = 180.0
offset_bottom = 211.0
text = "应用折扣"

[node name="TriggerBlackMarketButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 220.0
offset_right = 180.0
offset_bottom = 251.0
text = "触发黑市商人"

[node name="TriggerMysteryShopButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 260.0
offset_right = 180.0
offset_bottom = 291.0
text = "触发神秘商店"

[node name="TriggerEquipmentShopButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 300.0
offset_right = 180.0
offset_bottom = 331.0
text = "触发装备商店"

[node name="AddRelicButton" type="Button" parent="TestPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 340.0
offset_right = 180.0
offset_bottom = 371.0
text = "添加随机遗物"

[node name="ToggleTestPanelButton" type="Button" parent="TestPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "隐藏测试面板"

[node name="TestDataPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = 0.0
offset_right = -250.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3")
visible = false

[node name="TitleLabel" type="Label" parent="TestDataPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "测试数据面板"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TestDataPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="TestDataPanel/VBoxContainer"]
layout_mode = 2
text = "测试数据"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TestDataPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerInfoContainer" type="VBoxContainer" parent="TestDataPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="PlayerLevelLabel" type="Label" parent="TestDataPanel/PlayerInfoContainer"]
layout_mode = 2
text = "玩家等级: 1"

[node name="PlayerGoldLabel" type="Label" parent="TestDataPanel/PlayerInfoContainer"]
layout_mode = 2
text = "玩家金币: 100"

[node name="PlayerHealthLabel" type="Label" parent="TestDataPanel/PlayerInfoContainer"]
layout_mode = 2
text = "玩家生命: 100/100"

[node name="ShopInfoContainer" type="VBoxContainer" parent="TestDataPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 200.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="ShopDiscountLabel" type="Label" parent="TestDataPanel/ShopInfoContainer"]
layout_mode = 2
text = "商店折扣: 100%"

[node name="ShopTypeLabel" type="Label" parent="TestDataPanel/ShopInfoContainer"]
layout_mode = 2
text = "商店类型: 普通商店"

[node name="PurchasedItemsContainer" type="VBoxContainer" parent="TestDataPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -300.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="TestDataPanel/PurchasedItemsContainer"]
layout_mode = 2
text = "已购买物品"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TestDataPanel/PurchasedItemsContainer"]
layout_mode = 2

[node name="PurchasedItemsList" type="ItemList" parent="TestDataPanel/PurchasedItemsContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true
